change: Minor improvementsc

--- a/web/templates/dashboard.html
+++ b/web/templates/dashboard.html
@@ -5,7 +5,10 @@
     <div class="flex gap-2 items-center">
         <button class="bg-primary-800 text-stone-50 rounded text-sm p-2" @click="openAddModal">Nuevo Expediente</button>
         <!-- <button class="bg-primary-800 text-stone-50 rounded text-sm p-2">Generar Reporte</button> -->
-        <button class="bg-primary-800 text-stone-50 rounded text-sm p-2 ml-auto">Buscar</button>
+        <button class="bg-primary-800 text-stone-50 rounded text-sm p-2 ml-auto">Filtros</button>
+    </div>
+    <div class="relative">
+
     </div>
     <div class="py-2"></div>
     {{template "alert-cards" .Alerts}}
