--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -150,6 +150,6 @@
 
 {{define "results"}}
     <div class="relative grid grid-cols-1 gap-3 auto-rows-fr col-start-2 row-start-1 px-4" data-result-list="">
-        <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 h-16 w-16 rounded-full border-4 border-transparent border-t-primary-900 border-l-primary-900" data-spinner=""></div>
+        <!-- <div class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 h-16 w-16 rounded-full border-4 border-transparent border-t-primary-900 border-l-primary-900" data-spinner=""></div> -->
     </div>
 {{end}}
